--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-pro-sidebar": "^0.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "homepage" : "./"
+    "web-vitals": "^0.2.4"
+    
   },
+
+  "homepage" : "http://antonin-dev.fr/reactbreaking/",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
